--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-api-credentials",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "keywords": [
     "n8n-community-node-package",
@@ -34,7 +34,8 @@
     "n8nNodesApiVersion": 1,
     "credentials": [
       "dist/credentials/WeFeng.credentials.js",
-      "dist/credentials/WorkWeiXin.credentials.js"
+      "dist/credentials/WorkWeiXin.credentials.js",
+      "dist/credentials/YuQue.credentials.js"
     ],
     "nodes": [
       "dist/nodes/DoNotUseThis/DoNotUseThis.node.js"
